# nanobot

./: .gitignore  Cargo.toml  README.md  build.rs  justfile  mise.toml
.github/workflows/: ci.yml
docs/runbooks/: nanobot-rs-runtime-smoke-checklist.md  sidekick-runtime-smoke-checklist.md
docs/superpowers/plans/: 2026-03-22-channel-markdown-and-runtime-visibility.md  2026-03-22-wecom-runtime-logging.md  2026-03-22-wecom-web-shortcuts.md  2026-03-24-nanobot-rs-readme.md  2026-03-24-sidekick-readme.md  2026-03-25-session-parallelism-and-message-debounce.md  2026-04-01-config-toml.md  2026-04-02-sidekick-quiet-editorial-recolor.md  2026-04-02-sidekick-skills-management.md  2026-04-02-sidekick-skills.md  2026-04-03-nanobot-rs-channel-media-parity.md  2026-04-03-nanobot-rs-cli-ops-parity.md  2026-04-03-nanobot-rs-memory-consolidation-parity.md  2026-04-03-sidekick-channel-media-parity.md  2026-04-03-sidekick-cli-ops-parity.md  2026-04-03-sidekick-memory-consolidation-parity.md  2026-04-03-tab-style-unification.md  (+2 more)
frontend/: index.html  package-lock.json  package.json
frontend/src/: api.js  browser-globals.js  i18n.js  main.js  render.js  skills.js  style.css  toml.js
frontend/test/: render.test.js  toml.test.js
nanobot-rs/: Cargo.toml  README.md  build.rs
nanobot-rs/docs/superpowers/plans/: 2026-04-01-config-toml.md  2026-04-02-nanobot-rs-quiet-editorial-recolor.md  2026-04-02-nanobot-rs-skills-management.md  2026-04-02-nanobot-rs-skills.md
nanobot-rs/docs/superpowers/specs/: 2026-04-01-config-toml-design.md  2026-04-02-nanobot-rs-quiet-editorial-recolor-design.md  2026-04-02-nanobot-rs-skills-management-design.md
nanobot-rs/frontend/: index.html  package-lock.json  package.json  vite.config.js
nanobot-rs/frontend/src/: api.js  i18n.js  main.js  render.js  skills.js  style.css
nanobot-rs/frontend/test/: render.test.js  skills.test.js
nanobot-rs/skills/: README.md
nanobot-rs/src/: lib.rs
nanobot-rs/src/agent/: mod.rs
nanobot-rs/src/channels/: feishu.rs  mod.rs  wecom.rs  weixin.rs
nanobot-rs/src/cli/: mod.rs
nanobot-rs/src/config/: mod.rs
nanobot-rs/src/control/: mod.rs
nanobot-rs/src/cron/: mod.rs
nanobot-rs/src/heartbeat/: mod.rs
nanobot-rs/src/mcp/: mod.rs
nanobot-rs/src/presentation/: filters.rs  markdown.rs  mod.rs
nanobot-rs/src/providers/: base.rs  codex.rs  mod.rs  openai_compatible.rs  registry.rs
nanobot-rs/src/session/: mod.rs
nanobot-rs/src/skills/: mod.rs
nanobot-rs/src/tools/: mod.rs  web.rs
nanobot-rs/src/web/: api.rs  mod.rs  page.rs
nanobot-rs/tests/: agent.rs  agent_web.rs  channels.rs  cli.rs  cli_web.rs  codex_provider.rs  control.rs  feishu.rs  gateway.rs  model_profiles.rs  presentation.rs  provider_runtime.rs  providers.rs  session.rs  skills.rs  tools.rs  web.rs  web_logging.rs  web_page.rs  web_server.rs  wecom.rs  weixin.rs
scripts/: bootstrap.sh
skills/: README.md
src/: main.rs
src/agent/: memory.rs  mod.rs
src/bus/: mod.rs
src/channels/: feishu.rs  mod.rs  wecom.rs  weixin.rs
src/cli/: auth.rs  mod.rs  onboard.rs  status.rs
src/config/: mod.rs
src/control/: mod.rs
src/cron/: mod.rs
src/heartbeat/: mod.rs
src/mcp/: mod.rs
src/presentation/: filters.rs  markdown.rs  mod.rs
src/providers/: codex.rs  mod.rs
src/security/: network.rs
src/session/: mod.rs
src/skills/: mod.rs
src/tools/: mod.rs  web.rs
src/web/: api.rs  mod.rs  page.rs
tests/: agent.rs  agent_web.rs  channels.rs  cli.rs  cli_web.rs  codex_provider.rs  control.rs  feishu.rs  gateway.rs  model_profiles.rs  presentation.rs  provider_runtime.rs  providers.rs  session.rs  skills.rs  tools.rs  web.rs  web_logging.rs  web_page.rs  web_server.rs  wecom.rs  weixin.rs
(+21 files in other folders)
