[package]
name = "nanobot-rs"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A lightweight personal AI assistant in Rust"

[lib]
name = "nanobot_rs"
path = "src/lib.rs"

[[bin]]
name = "nanobot-rs"
path = "src/main.rs"

[dependencies]
ammonia = "4.1.2"
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3.31"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.8"
similar = "2.7.0"
tokio = { version = "1.48.0", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
pulldown-cmark = "0.13.0"
qrcodegen = "1.8.0"
rust-embed = "8"
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
